[project]
name = "sshmanager"
version = "0.1.0"
description = ""
authors = [
    {name = "garv.works@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "paramiko (>=3.5.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
