[project]
name = "sshmanager"
version = "0.1.0"
description = ""
authors = [{ name = "garv.works@outlook.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "paramiko>=3.5.1,<4.0.0",
  "cryptography==41.0.7",
  "bcrypt==4.0.1",
  "cffi==1.15.1",
  "pycparser==2.21",
  "PyYAML>=6.0"
]

[tool.poetry]
packages = [{ include = "ssh_cluster" }]  # ✅ THIS is what was missing

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
